packages/typ/tests/fixtures/diagnostics/0763_polyvar_branch_result_mismatch_01.ml
let use_alpha = function
  | `A (x : int) -> x
  | `B (y : bool) -> y
